Bug 333897 - download of the new list failed
Summary: download of the new list failed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 4.13
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-26 10:17 UTC by Philippe ROUBACH
Modified: 2014-06-25 07:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments
downloading addblockrule.org list fails (183.54 KB, image/png)
2014-06-24 18:35 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-04-26 10:17:46 UTC
i upgraded opensuse 13.1 from kde 4.12.4 to 4.13.0

each time i launch kontact i have a kmail message in the kde notifier :

le téléchargement de la nouvelle liste a échoué (download of the new list failed)

Reproducible: Always
Comment 1 Philippe ROUBACH 2014-04-30 11:03:57 UTC
i remeber this :

at first kde session after update

i see 2 messages :

le téléchargement de la nouvelle liste a échoué (download of the new list failed)
then
le téléchargement de la nouvelle liste a réussi (download of the new list success)
then
kde session crashes 
then
kdm template was displayed according to open a new session

since this crash at each kde session opening i have the message "le téléchargement de la nouvelle liste a échoué (download of the new list failed)"
Comment 2 Philippe ROUBACH 2014-06-24 18:34:42 UTC
i know now where the message comes from

if i want to display in kmail the addblockrules.org list (in kmail>security>block
then
i have the same message
and
a window opens with :

Une erreur est survenue pendant le téléchargement de la liste : « Le fichier ou le dossier http://adblockrules.org/download.php?typeall n'existe pas. »

with kde 4.13.2 there is no more crash and every time downloading the list fails

see the capture
Comment 3 Philippe ROUBACH 2014-06-24 18:35:34 UTC
Created attachment 87381 [details]
downloading addblockrule.org list fails
Comment 4 Laurent Montel 2014-06-25 05:24:55 UTC
As it's inform you it doesn't exist.
It was remove from list of adblock in kdepim 4.12.4
see bug 332176

=> remove it from list.

I will add a delete button in interface.
Regards
Comment 5 Laurent Montel 2014-06-25 05:46:43 UTC
Git commit 760145f97d5b5b9399625c11b00c9c27c4bb04c1 by Montel Laurent.
Committed on 25/06/2014 at 05:45.
Pushed by mlaurent into branch 'master'.

Fix Bug 333897 - download of the new list failed

Add a delete button to delete directly list which doesn't exist.
FIXED-IN: 4.14

M  +16   -0    messageviewer/adblock/adblocksettingwidget.cpp
M  +1    -0    messageviewer/adblock/adblocksettingwidget.h
M  +14   -1    messageviewer/adblock/adblockshowlistdialog.cpp
M  +7    -1    messageviewer/adblock/adblockshowlistdialog.h

http://commits.kde.org/kdepim/760145f97d5b5b9399625c11b00c9c27c4bb04c1
Comment 6 Philippe ROUBACH 2014-06-25 06:27:41 UTC
>> I will add a delete button in interface.

but there is always a button to delete a set of rulles
Comment 7 Laurent Montel 2014-06-25 07:26:29 UTC
Yes indeed but you didn't use it :)
So I added in dialogbox directly.