Fix Bug 333897 - download of the new list failed

Add a delete button to delete directly list which doesn't exist.

BUG: 333897
FIXED-IN: 4.14